--- a/src/index.css
+++ b/src/index.css
@@ -3,18 +3,12 @@
 
 @theme {
     --color-darkBlue : #0D0D57;
+    --color-lightGray: #eee;
 }
 
 * {
     /* font-family: "Roboto", sans-serif; */
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
     font-family: "JetBrains Mono", monospace; 
     font-size: 32px;
     font-weight: 250;
-}
-
-.heroText{
-    text-align: center;
 }
