Made Homepage and eventpage to show the events detail from same json file

--- a/src/components/EventsPageCard.css
+++ b/src/components/EventsPageCard.css
@@ -34,6 +34,10 @@
     margin-bottom: 1vh;
     margin-left: 8vh;
 }
+.Organiser .Date{
+    font-size: 12px;
+    margin-left: 9vh;
+}
 .Desc{
     color: #444;
     margin: 0 5vh;
