--- a/src/components/EventsPageCard.css
+++ b/src/components/EventsPageCard.css
@@ -13,15 +13,15 @@
   margin-left: 9vh;
   height: 25vh;
   width: 25vh;
-  border-radius: 50%;
-  object-fit: cover;
-
-  -webkit-mask-image: radial-gradient(circle, #000 99%, transparent 100%);
-  mask-image: radial-gradient(circle, #000 99%, transparent 100%);
-
-  -webkit-mask-size: 100% 100%;
-  mask-size: 100% 100%;
-  margin-bottom: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 2vh;
+}
+.Bgimg img{
+  height: 24vh;
+  border-radius: 2vh;
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.382);
 }
 
 .CardTitle {
